--- a/style.css
+++ b/style.css
@@ -1,5 +1,51 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #fefefe;
+}
+
+h1 {
+    font-size: 50px;
+}
+
+.orange-color {
+    color: orange;
+}
+
+section {
+    display: flex;
+
+}
+
+.half-width {
+    width: 50%;
+    margin-top: 40px;
+    padding-left: 5%;
+}
+
+.half-width img {
+    width: 80%;
+}
+
+.link-btn {
+    text-decoration: none;
+    background-image: linear-gradient(lightsalmon, tomato);
+    font-weight: 700;
+    padding: 10px 40px;
+    color: #fff;
+    border-radius: 8%;
+
+}
+
+.p-graph {
+    margin-bottom: 30px;
+}
+
+.head {
+    margin-top: 40px;
 }
