--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ section{
 
 }
 .half-width{
-    width:100%;
+    width:50%;
     padding-left: 7%;
 }
 .half-width img{
@@ -30,6 +30,7 @@ section{
     background-image: linear-gradient(lightsalmon, tomato);
     padding:10px 40px;
     border-radius: 8%;
+    color: #fff;
 }
 .p-graph{
     margin-bottom: 30px;
